--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
   "bugs": {
     "url": "https://github.com/mariya-goncharenko/express-mesto-gha/issues"
   },
-  "homepage": "https://github.com/mariya-goncharenko/express-mesto-gha#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
@@ -27,7 +26,9 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "express-winston": "^4.2.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
