--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/mariya-goncharenko/express-mesto-gha/issues"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
