--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^7.1.0",
     "validator": "^13.9.0",
     "express-winston": "^4.2.0",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
