--- a/backend/package.json
+++ b/backend/package.json
@@ -21,15 +21,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-winston": "^4.2.0",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "validator": "^13.9.0",
-    "express-winston": "^4.2.0",
-    "winston": "^3.9.0",
-    "dotenv": "^16.0.3"
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
