--- a/backend/package.json
+++ b/backend/package.json
@@ -28,15 +28,12 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "validator": "^13.9.0",
-    "winston": "^3.9.0",
-    "cors": "^2.8.5"
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-require": "^0.0.1",
     "nodemon": "^2.0.22"
   }
 }
